syntax = "proto3";
package grpc.bet;

option java_multiple_files = true;
option java_package = "grpc.bet";
option go_package = "grpc.bet";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Bet {
    string id = 1 [json_name="authId"];
    string description = 2 [json_name="description"];
    string payment = 3 [json_name="payment"];
    string better_id = 4 [json_name="betterId"];
    string accepter_id = 5 [json_name="accepter_id"];
    google.protobuf.Timestamp created_at = 6 [json_name="createdAt"];
    google.protobuf.Timestamp updated_at = 7 [json_name="updatedAt"];
}


message BetUpdate {
  google.protobuf.StringValue description = 1 [json_name="description"];
  google.protobuf.StringValue payment = 2 [json_name="payment"];
  google.protobuf.StringValue accepter_id = 5 [json_name="accepter_id"];
  google.protobuf.Timestamp updated_at = 4 [json_name="updatedAt"];
}

message CreateRequest{
    string api = 1;
    Bet bet = 2;
}
message CreateResponse{
    string api = 1;
}

message ReadRequest{
    string api = 1;
    string id = 2;
}
message ReadResponse{
    string api = 1;
    Bet bet = 2;
}

message ReadAllRequest{
  string api = 1;
  string user_id = 2;
  int32 limit = 3;
  int32 page = 4;
}
message ReadAllResponse{
  string api = 1;
  repeated Bet bet = 2;
}

message UpdateRequest{
    string api = 1;
    string id = 2;
    BetUpdate BetUpdate = 3;
}
message UpdateResponse{
    string api = 1;
}

message DeleteRequest{
    string api = 1;
    string id = 2;
}
message DeleteResponse{
    string api = 1;
}

service BetService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}