syntax = "proto3";
package grpc.user;

option java_multiple_files = true;
option java_package = "grpc.user";
option go_package = "grpc.user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message User {
    string id = 1 [json_name="id"];
    string email = 2 [json_name="email"];
    string name = 3 [json_name="name"];
    string avatar = 4 [json_name="avatar"];
    google.protobuf.Timestamp created_at = 5 [json_name="createdAt"];
    google.protobuf.Timestamp updated_at = 6 [json_name="updatedAt"];
}


message UserUpdate {
  google.protobuf.StringValue name = 1 [json_name="name"];
  google.protobuf.StringValue avatar = 4 [json_name="avatar"];
  google.protobuf.Timestamp updated_at = 7 [json_name="updatedAt"];
}

message LoginRequest{
    string api = 1;
    string auth_id = 2;
}
message LoginResponse{
    string api = 1;
    User user = 2;
}

message ReadRequest{
    string api = 1;
    string id = 2;
}

message ReadResponse{
    string api = 1;
    User user = 2;
}

message DoesUserExistRequest{
  string api = 1;
  string id = 2;
}

message DoesUserExistResponse{
  string api = 1;
  bool exists = 2;
}

message UpdateRequest{
    string api = 1;
    string id = 2;
    UserUpdate user = 3;
}
message UpdateResponse{
    string api = 1;
}

message DeleteRequest{
    string api = 1;
    string id = 2;
}
message DeleteResponse{
    string api = 1;
}

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc DoesUserExist(DoesUserExistRequest) returns (DoesUserExistResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}